Replace species dropdowns with search bar on hgTables. Fix some styling issues but still need to do better alignment

--- a/src/hg/htdocs/style/HGStyle.css
+++ b/src/hg/htdocs/style/HGStyle.css
@@ -1265,10 +1265,17 @@ span.gbSessionChanged {
     color: red;
 }
 
+td.searchCell {
+    width: 1%;
+    white-space: nowrap;
+}
+
 td.searchCell > .flexContainer {
     display: flex;
     flex-direction: column;
-    gap: 0.5em;
+    gap: 0.2em;
+    min-width: 0;
+    max-width: 500px;
 }
 
 .searchBarAndButton {
@@ -1281,7 +1288,23 @@ td.searchCell:first-child {
     padding-right: 1em;
 }
 
+.searchBarAndButton {
+    display: flex;
+    align-items: center;
+    max-width: 500px;
+    min-width: 0;
+    gap: 0.25em;
+}
+
 .genomeSearchBarDefault {
     flex: 1;
+    box-sizing: border-box;
+    min-width: 0;
+}
+
+.tbSearchLabel {
+    font-weight: bold;
+    white-space: normal;
+    max-width: 100%;
     box-sizing: border-box;
 }
